2022-10-24  Alexios Galanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.4-9.
	* Fix to gig.c warning about prototype declaration.
	
2022-04-18  Alexios Galanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.4-8.
	* Macros fixed in C code based on changes to headers and warning from CRAN.
	
2022-02-04  Alexios Galanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.4-7.
	* Export of additional functions for use in rmgarch
	
2022-01-18  Alexios Galanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.4-6.
	* Removed nloptr dependency
	
2021-05-14  Alexios Galanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.4-5.
	* Patch provided by Christian Haug to properly handle the state of the random number generator
	(GetRNGstate/PutRNGstate calls inside of the C functions).
	
2020-07-14  Alexios Galanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.4-4.
	* Removed expm dependency and implmented locally in R the matrix power function (%^%).
	
2020-04-18  Alexios Galanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.4-3.
	* Corrected documentation on FIGARCH model expansion in vignette.

2018-11-18  Alexios Galanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.4-1.
	* Tobias Kley added as contributor. Provided patch to avoid unexpected behavior when no seed is set.
	
2018-01-28  Alexios Galanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.4-0.
	* Added robust score calculation to the returned uGARCHfit object to enable recreating the robust standard errors.
	* Fix to VaRTest (both the conditional and unconditional tests) to calculate directly in powers rather than logs to
	avoid problems (thanks to Kurt Hornik for report/fix).

2017-10-30  Alexios Galanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.3-9.