@@ -6,13 +6,13 @@ if(!exists("meta") || is.null(meta)) meta <- packageDescription("rugarch")
 year <- sub("-.*", "", meta$Date)
 note <- sprintf("R package version %s.", meta$Version)
 
-citEntry(entry="Manual",
+bibentry(bibtype="Manual",
          title = "rugarch: Univariate GARCH models.",
-         author = personList(as.person("Alexios Ghalanos")),
+         author = c("Alexios Galanos"),
          year         = year,
          note         = note,
          textVersion = 
-         paste("Alexios Ghalanos",
+         paste("Alexios Galanos",
                sprintf("(%s).", year),
                "rugarch: Univariate GARCH models.",
 	       note),
